Use docker for build and serve environments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,4 @@
 app:
   build: .
-  dockerfile: Dockerfile
-  volumes:
-    - ./public:/var/www/web/public
-  command: sh ./build.sh
+  ports:
+    - 9000:80
