--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
 
       location / {
           include  /etc/nginx/mime.types;
-          root /var/www/web;
+          root /web;
           try_files $uri $uri/ =404;
       }
   }
