--- a/scripts/build
+++ b/scripts/build
@@ -1,4 +1,4 @@
 #!/bin/sh
 
-elm make src/elm/Main.elm --output=public/bundle.js \
+elm make src/elm/Main.elm --output=public/bundle.js --yes \
 && cp src/index.html public/
